# message_queue_ipc

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  message_queue.cpp  message_queue.hpp  message_receive.cpp
src/: message_chqbytes.cpp  message_create.cpp  message_info.cpp  message_rm.cpp  message_send.cpp
